// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Taxes Api all() parse the returned data correctly 1`] = `
[
  {
    "id": 1,
    "is_group": false,
    "is_used": true,
    "value": /* Decimal Instance => */ "20",
  },
  {
    "id": 2,
    "is_group": false,
    "is_used": false,
    "value": /* Decimal Instance => */ "5.5",
  },
  {
    "id": 3,
    "is_group": false,
    "is_used": false,
    "value": /* Decimal Instance => */ "10",
  },
]
`;

exports[`Taxes Api create() parse the returned data correctly (with #1) 1`] = `
{
  "id": 1,
  "is_group": false,
  "is_used": true,
  "value": /* Decimal Instance => */ "20",
}
`;

exports[`Taxes Api create() parse the returned data correctly (with #2) 1`] = `
{
  "id": 2,
  "is_group": false,
  "is_used": false,
  "value": /* Decimal Instance => */ "5.5",
}
`;

exports[`Taxes Api create() parse the returned data correctly (with #3) 1`] = `
{
  "id": 3,
  "is_group": false,
  "is_used": false,
  "value": /* Decimal Instance => */ "10",
}
`;

exports[`Taxes Api update() parse the returned data correctly (with #1) 1`] = `
{
  "id": 1,
  "is_group": false,
  "is_used": true,
  "value": /* Decimal Instance => */ "20",
}
`;

exports[`Taxes Api update() parse the returned data correctly (with #2) 1`] = `
{
  "id": 2,
  "is_group": false,
  "is_used": false,
  "value": /* Decimal Instance => */ "5.5",
}
`;

exports[`Taxes Api update() parse the returned data correctly (with #3) 1`] = `
{
  "id": 3,
  "is_group": false,
  "is_used": false,
  "value": /* Decimal Instance => */ "10",
}
`;
